[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scene/prefab/object/Bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/assets/texture/screen_outline.png" type="Texture" id=2]
[ext_resource path="res://src/assets/texture/white_gradient_background.png" type="Texture" id=3]
[ext_resource path="res://src/scene/level/BreakoutTest.gd" type="Script" id=4]
[ext_resource path="res://src/assets/font/sorena/Fonts/ttf/Sorena-Normal.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 107.5, 507.5 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 5 )

[node name="BreakoutTest" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
texture = ExtResource( 3 )

[node name="ScreenOutline" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Bar" parent="." instance=ExtResource( 1 )]

[node name="Bricks" type="Node2D" parent="."]

[node name="ScreenSides" type="Node2D" parent="."]

[node name="RightArea" type="Area2D" parent="ScreenSides" groups=["Right"]]
position = Vector2( 0, -133 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenSides/RightArea"]
position = Vector2( 611, 140 )
shape = SubResource( 2 )

[node name="LeftArea" type="Area2D" parent="ScreenSides" groups=["Left"]]
position = Vector2( -1224, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenSides/LeftArea"]
position = Vector2( 611, -1.75 )
shape = SubResource( 2 )

[node name="TopArea" type="Area2D" parent="ScreenSides" groups=["Top"]]
position = Vector2( 0, -403 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenSides/TopArea"]
position = Vector2( 0, -1.5 )
shape = SubResource( 2 )

[node name="BottomArea" type="Area2D" parent="ScreenSides" groups=["Bottom"]]
position = Vector2( 0, 406 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenSides/BottomArea"]
position = Vector2( 0, -1.5 )
shape = SubResource( 2 )

[node name="Balls" type="Node2D" parent="."]

[node name="Particles" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelLabel" type="RichTextLabel" parent="CanvasLayer/CenterContainer"]
margin_left = 262.0
margin_top = 250.0
margin_right = 762.0
margin_bottom = 350.0
rect_min_size = Vector2( 500, 100 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center]Level   1[/center]"
text = "Level   1"
scroll_active = false

[node name="LevelTextTween" type="Tween" parent="."]

[connection signal="body_entered" from="ScreenSides/RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="ScreenSides/RightArea" to="." method="_on_RightArea_body_exited"]
[connection signal="body_entered" from="ScreenSides/LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_exited" from="ScreenSides/LeftArea" to="." method="_on_LeftArea_body_exited"]
[connection signal="body_entered" from="ScreenSides/TopArea" to="." method="_on_TopArea_body_entered"]
